# django_ref

./: .env_example  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
src/account/: admin.py  forms.py  models.py  urls.py  views.py
src/account/migrations/: 0001_initial.py  0002_remove_myuser_avatar.py  0003_alter_myuser_referred_by.py
src/account/templates/account/: details.html  login.html  logout.html  main_login.html  main_register.html  register.html
src/config/: env_settings.py  settings.py  urls.py
src/main/: urls.py  views.py
src/main/templates/main/: base.html  layout.html
src/main/templates/main/components/: navbar.html
src/referral_system/: cache.py  forms.py  urls.py  views.py
src/referral_system/templates/referral_system/: main_add_referral.html  main_create.html  main_get_referrals.html  test_add_referral.html  test_create.html  test_get_referrals.html
