[tool.poetry]
name = "django-ref"
version = "0.1.0"
description = ""
authors = ["IlyaGrebenschikov  <ilushagr22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
python-dotenv = "^1.0.1"
psycopg = "^3.1.18"
pillow = "^10.3.0"
django-redis = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
